# git-ai-learning-plan

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  LICENSE  PROJECT_RULES.md  README.md  agentic-ai-access-guide.md  git-quick-branch-pr-guide.md  index.html  lamp-git-modernization-learning-plan.md  lamp-mamp-modernization-learning-plan.md  learning-plan.md  mkdocs.yml  portable-shell-dotfiles-guide.md  pyproject.toml  requirements.txt  run-precommit-checks.sh
.cursor/rules/: project-rules.mdc
.github/workflows/: gh-pages.yml
agentic-ai-access/: index.html
ai-git-learning-plan/: index.html
docs/: agentic-ai-access.md  ai-git-learning-plan.md  dotfiles-examples.md  git-branch-pr-guide.md  index.md  lamp-modernization-devcontainer.md  lamp-modernization-mamp.md  portable-shell-dotfiles.md  python3-project-guide.md
dotfiles-examples/: .gitignore  .zshrc  README.md  bootstrap.sh  index.html
git-branch-pr-guide/: index.html
lamp-modernization-devcontainer/: index.html
lamp-modernization-mamp/: index.html
portable-shell-dotfiles/: index.html
python3-project-guide/: index.html
search/: search_index.json
