[project]
name = "git-ai-learning-plan"
version = "0.1.0"
description = "A comprehensive curriculum for mastering modern development workflows with agentic AI and Git"
authors = [
    {name = "Corey Hines", email = "github@coreyhines.com"},
]
dependencies = [
    "mkdocs-material>=9.6.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

[tool.black]
line-length = 80
target-version = ["py311"] 
